--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Keywords" content="Apuestas virtuales deportivas, Casino, Bingo, Truco, Black-Jack, Ruleta, Slots">
+    <meta name="description"
+        content="Sitio de apuestas virtuales en vivo, orgullosos de ser el patrocinador oficial de Boca Juniors.">
     <!--Logo-->
     <link rel="shortcut icon" href="./imagenes/twenty-one-kebab-case.png" type="image/x-icon">
     <!--Boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!--Aos-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="./css/style.css">
     <title>Twenty-one</title>
@@ -63,14 +69,14 @@
     <!--Imagenes-->
     <header id="header">
         <div class="Partido1">
-            <h4>CUOTAS AUMENTADAS</h4>
+            <h4>LIGA DE ESPAÑA</h4>
             <p>Copa UEFA</p>
             <p>⚽️ 15/03/2023 21:30</p>
             <p>
-                Real Sociedad 2.0
-                <img src="./imagenes/real_sociedad_footballteam_18006-kebab-case.png" alt="Real Sociedad">
-                vs Sevilla 1.1
-                <img src="./imagenes/Sevilla.png" alt="Sevilla">
+                Real S. 2.0
+                <img src="./imagenes/real_sociedad_footballteam_18006-kebab-case.png" class="Img-Partido1"
+                    alt="Real Sociedad">vs Sevilla 1.1
+                <img src="./imagenes/Sevilla.png" class="Img-Partido1" alt="Sevilla">
             </p>
         </div>
         <div class="Partido1">
@@ -78,10 +84,10 @@
             <p>Octavos de final</p>
             <p>⚽️ 15/03/2023 17:30</p>
             <p>
-                Atletico Madrid 1.5
-                <img src="./imagenes/Atletico.png" alt="Atletico"> vs
+                Atlético Madrid 1.5
+                <img src="./imagenes/Atletico.png" class="Img-Partido1" alt="Atletico"> vs
                 Bayern M 2.0
-                <img src="./imagenes/BayernMunich-kebab-case.png" alt="Bayern Munich">
+                <img src="./imagenes/BayernMunich-kebab-case.png" class="Img-Partido1" alt="Bayern Munich">
             </p>
         </div>
         <div class="Partido1">
@@ -89,10 +95,11 @@
             <p>Fecha 19</p>
             <p>⚽️ 16/03/2023 17:30</p>
             <p>Barcelona 2.0
-                <img src="./imagenes/barcelona.png" alt="Barcelona"> vs
+                <img src="./imagenes/barcelona.png" class="Img-Partido1" alt="Barcelona"> vs
                 Real Madrid 2.5
-                <img src="./imagenes/realmadrid-kebab-case.png" alt="Real Madrid">
+                <img src="./imagenes/realmadrid-kebab-case.png" class="Img-Partido1" alt="Real Madrid">
             </p>
+        </div>
         </div>
     </header>
 
@@ -101,7 +108,7 @@
 
         <aside>
             <!--Tabla-->
-            <table>
+            <table class="table-hover">
                 <th>Destacados</th>
                 <tr>
                     <td>Liga Profesional Argentina ⚽️</td>
@@ -211,6 +218,81 @@
                 <tr>
                     <td>Esquitacion🏇</td>
                 </tr>
+                <th>Lo mas buscado</th>
+                <tr>
+                    <td>Uefa Champions⚽️</td>
+                </tr>
+                <tr>
+                    <td>Uefa Europa⚽️</td>
+                </tr>
+                <tr>
+                    <td>Conference League⚽️</td>
+                </tr>
+                <tr>
+                    <td>Copa del rey🇪🇸⚽️</td>
+                </tr>
+                <tr>
+                    <td>Fa Cup 🏴󠁧󠁢󠁥󠁮󠁧󠁿⚽️</td>
+                </tr>
+                <tr>
+                    <td>Carabao Cup🏴󠁧󠁢󠁥󠁮󠁧󠁿⚽️</td>
+                </tr>
+                <tr>
+                    <td>
+                        Copa de Francia🇫🇷⚽️
+                    </td>
+                </tr>
+                <tr>
+                    <td>Calcio🇮🇹⚽️</td>
+                </tr>
+                <tr>
+                    <td>Copa Italiana🇮🇹</td>
+                </tr>
+                <tr>
+                    <td>Liga do Brasil🇧🇷⚽️</td>
+                </tr>
+                <tr>
+                    <td>Campeonato Gaucho🇧🇷⚽️</td>
+                </tr>
+                <tr>
+                    <td>Copa Argentina⚽️🇦🇷</td>
+                </tr>
+                <tr>
+                    <td>Copa Libertadores⚽️</td>
+                </tr>
+                <tr>
+                    <td>Copa Sudamericana⚽️</td>
+                </tr>
+                <tr>
+                    <td>Recopa⚽️</td>
+                </tr>
+                <tr>
+                    <td>Primera B Nacional🇦🇷⚽️</td>
+                </tr>
+                <tr>
+                    <td>NBA🇺🇸🏀</td>
+                </tr>
+                <tr>
+                    <td>Premiership Inglesa🏴󠁧󠁢󠁥󠁮󠁧󠁿🏉</td>
+                </tr>
+                <tr>
+                    <td>Slar🏉</td>
+                </tr>
+                <tr>
+                    <td>4 Naciones🏉</td>
+                </tr>
+                <tr>
+                    <td>
+                        URBA🇦🇷🏉
+                    </td>
+                </tr>
+                <tr>
+                    <td>Six Nations🏉</td>
+                </tr>
+                <tr>
+                    <td>Super Rugby🇳🇿🏉</td>
+                </tr>
+
             </table>
         </aside>
     </div>
@@ -222,22 +304,12 @@
             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="./imagenes/Godoycruz-kebab-case.jpeg" class="carousel" alt="...">
+                        <img src="./imagenes/Godoycruz-kebab-case.jpeg" class="carousel" alt="Futbol">
                     </div>
                     <div class="carousel-item">
-                        <img src="./imagenes/Ligas.jpg" class="carousel" alt="...">
+                        <img src="./imagenes/Ligas.jpg" class="carousel" alt="Ligas">
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="carousel"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
         </section>
         <section class="Section-Deportes">
@@ -252,16 +324,6 @@
                         <img src="./imagenes/rugby.jpeg" class="carousel" alt="...">
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="carousel"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
         </section>
         <section class="Section-Deportes2">
@@ -280,22 +342,12 @@
                         <img src="./imagenes/F1.jpg" class="carousel" alt="...">
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="carousel"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
         </section>
         </div>
     </main>
     <div class="Tabla-Inicio">
-        <table>
+        <table class="table-hover">
 
             <th>Liga Argentina⚽️</th>
             <tr>
@@ -365,6 +417,89 @@
                     Betis <span>3.0</span> vs Sevilla <span>2.0</span>
                 </td>
             </tr>
+            <th>Basquetball 🏀</th>
+            <tr>
+                <td>
+                    Golden State <span>2.0</span> vs Miami Heat <span>2.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Cleveland Cavaliers <span>2.0</span> vs Lakers <span>1.2</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Hornets <span> 30.3</span> vs Houston <span>2.5</span>
+                </td>
+            </tr>
+            <th>Tenis 🎾</th>
+            <tr>
+                <td>
+                    Andy Murray <span>2.0</span> vs Rafael Nadal <span>3.0</span>
+                </td>
+            </tr>
+            <th>Rugby🏉</th>
+            <tr>
+                <td>
+                    Pumas <span>2.0</span> vs All Blacks <span>1.2</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Sudafrica <span>1.2</span> vs Australia <span>3.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Inglaterra <span>1.2</span> vs Italia <span>8.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Higlanders <span>4.0</span> vs Crusaders <span>3.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Brumbies <span>2.0</span>vs Blues <span>3.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Sharks <span>4.0</span>vs Jaguares <span>3.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    San Luis <span>4.0</span>vs Los Tilos <span>3.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    La Plata<span>4.0</span>vs Hindu <span>1.5</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Alumni <span>2.0</span>vs SIC <span>7.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    CASI <span>2.0</span>vs Manuel Belgrano RC <span>3.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Deportivo Francesa <span>2.0</span> vs Newman <span>1.3</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Pucara <span>3.0</span> vs Belgrano Rugby Club <span>2.0</span>
+                </td>
+            </tr>
         </table>
     </div>
 
@@ -406,50 +541,57 @@
     </div>
 
     <section class="Quienes-somos">
-        <h2>Twenty-one, diversion asegurada</h2>
-        <p>
-            Twenty-one es una plataforma de juego online de la Provincia de
-            Misiones,<br>
-            sinedo la primer casa de apuestas oriunda de nuestra provinica, te
-            ofrecemos <br>una experiencia de juego legal y transparente para que
-            te sientas<br>seguro a la hora de divertirte.
-        </p>
-        <h2>Casa de Apuestas Deportivas</h2>
-        <p>
-            Estas listo para apostar a tu pasion? Ahora en Twenty-one<br>
-            podes crear las mejores apuestas duplicando tus ganancias, donde
-            quieras<br>
-            y con el dispositivo que desees, te invitamos a vivir el deporte
-            <br>de una manera distinta.
-        </p>
-        <h2>Blog de Informacion</h2>
-        <p>
-            Te traemos toda la informacion relevante que te servira a la hora de
-            apostar.<br>
-            Ultimos resultados, cantidad de tiros de esquina, probabilidades de
-            quien ganara,<br>
-            remates, ultimos campeones, y mucho mas! Elegí el deporte que más te
-            guste <br>
-            y la competencia del momento. Futbol, tenis, básquet y mucho más.
-            <br>¡Es el momento de jugar y encender el juego con tu equipo
-            favorito!
-        </p>
+        <div data-aos="zoom-out-down">
+            <h2>Twenty-one, diversion asegurada</h2>
+            <p>
+                Twenty-one es una plataforma de juego online de la Provincia de
+                Misiones,<br>
+                sinedo la primer casa de apuestas oriunda de nuestra provinica, te
+                ofrecemos <br>una experiencia de juego legal y transparente para que
+                te sientas<br>seguro a la hora de divertirte.
+            </p>
+        </div>
+        <div data-aos="zoom-out-down">
+            <h2>Casa de Apuestas Deportivas</h2>
+            <p>
+                Estas listo para apostar a tu pasion? Ahora en Twenty-one<br>
+                podes crear las mejores apuestas duplicando tus ganancias, donde
+                quieras<br>
+                y con el dispositivo que desees, te invitamos a vivir el deporte
+                <br>de una manera distinta.
+            </p>
+        </div>
+        <div data-aos="zoom-out-down">
+            <h2>Blog de Informacion</h2>
+            <p>
+                Te traemos toda la informacion relevante que te servira a la hora de
+                apostar.<br>
+                Ultimos resultados, cantidad de tiros de esquina, probabilidades de
+                quien ganara,<br>
+                remates, ultimos campeones, y mucho mas! Elegí el deporte que más te
+                guste <br>
+                y la competencia del momento. Futbol, tenis, básquet y mucho más.
+                <br>¡Es el momento de jugar y encender el juego con tu equipo
+                favorito!
+            </p>
+        </div>
     </section>
     <div class="Como-jugar">
-        <h2>Ya sabes como jugar?</h2>
-        <ol>
-            <li>Hacé click en el botón de “REGISTRARSE” en la home</li>
-            <li>
-                Completá el formulario de registro con tus datos. Todos los campos
-                obligatorios deben estar completos.
-            </li>
-            <li>
-                Revisá tu casilla de mail e ingresá al link que te enviamos para
-                activar tu cuenta.
-            </li>
-        </ol>
+        <div data-aos="zoom-out-down">
+            <h2>Ya sabes como jugar?</h2>
+            <ol>
+                <li>Hacé click en el botón de “REGISTRARSE” en la home</li>
+                <li>
+                    Completá el formulario de registro con tus datos. Todos los campos
+                    obligatorios deben estar completos.
+                </li>
+                <li>
+                    Revisá tu casilla de mail e ingresá al link que te enviamos para
+                    activar tu cuenta.
+                </li>
+            </ol>
+        </div>
     </div>
-
     <!--Inicio del Footer-->
     <footer id="pie">
         <div class="Ultimo">
@@ -491,6 +633,10 @@
         </div>
 
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
