--- a/pages/casino.html
+++ b/pages/casino.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Keywords" content="Apuestas virtuales deportivas, Casino, Bingo, Truco, Black-Jack, Ruleta, Slots">
+    <meta name="description" content="Aposta en vivo en el casino virtual de Twenty-one desde cualquier lado del mundo, juga y gana!">
     <!--Logo-->
     <link rel="shortcut icon" href="../imagenes/twenty-one-kebab-case.png" type="image/x-icon">
     <!--Boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        <!--Aos-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="../css/style.css">
     <title>Casino</title>
@@ -61,20 +65,7 @@
     <!--Inicio del header-->
     <!--Selector de clase-->
     <header class="Header-Casino">
-        <div class="Casino1">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-6 col-sm-6 col-md-6 col-lg-12 col-xl-12">
-                        <p>Casino En Vivo <img class="Img-Header" src="../imagenes/live.png" alt="Live"></p>
-                        <p>Slots <img class="Img-Header" src="../imagenes/slots.png" alt="Slots"></p>
-                        <p>Ruleta <img class="Img-Header" src="../imagenes/roulette.png" alt="Roulette"></p>
-                        <p>Black jack <img class="Img-Header" src="../imagenes/BlackJackicono-kebab-case.png"
-                                alt="Blackjack"></p>
-                        <p>Bingo <img class="Img-Header" src="../imagenes/Bingo.png" alt="Bingo"></p>
-                    </div>
-                </div>
-            </div>
-        </div>
+       
     </header>
 
     <div class="En-Vivo">
@@ -161,6 +152,7 @@
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                 <section class="Quienes-somos-Casino">
+                    <div data-aos="zoom-out-down">
                     <h2>Twenty-one, diversion asegurada</h2>
                     <p>
                         Twenty-one es una plataforma de juego online de la Provincia de
@@ -169,6 +161,8 @@
                         ofrecemos <br>una experiencia de juego legal y transparente para que
                         te sientas<br>seguro a la hora de divertirte.
                     </p>
+                    </div>
+                    <div data-aos="zoom-out-down">
                     <h2>Casa de Apuestas Deportivas</h2>
                     <p>
                         Estas listo para apostar a tu pasion? Ahora en Twenty-one<br>
@@ -177,6 +171,8 @@
                         y con el dispositivo que desees, te invitamos a vivir el deporte
                         <br>de una manera distinta.
                     </p>
+                    </div>
+                    <div data-aos="zoom-out-down">
                     <h2>Blog de Informacion</h2>
                     <p>
                         Te traemos toda la informacion relevante que te servira a la hora de
@@ -189,6 +185,7 @@
                         <br>¡Es el momento de jugar y encender el juego con tu equipo
                         favorito!
                     </p>
+                    </div>
                 </section>
             </div>
         </div>
@@ -197,6 +194,7 @@
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                 <div class="Como-jugar-Casino">
+                    <div data-aos="zoom-out-down">
                     <h2>Ya sabes como jugar?</h2>
                     <ol>
                         <li>Hacé click en el botón de “REGISTRARSE” en la home</li>
@@ -209,6 +207,7 @@
                             activar tu cuenta.
                         </li>
                     </ol>
+                </div>
                 </div>
             </div>
         </div>
@@ -291,6 +290,10 @@
                     </div>
                 </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
