--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Keywords" content="Apuestas virtuales deportivas, Casino, Bingo, Truco, Black-Jack, Ruleta, Slots">
+    <meta name="description" content="Ya no pierdas el tiempo y registrate, unite a la familia Twenty-one y accede a los mejores juegos.">
+    <!--Logo-->
     <!--Logo-->
     <link rel="shortcut icon" href="../imagenes/twenty-one-kebab-case.png" type="image/x-icon">
     <!--Boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
      crossorigin="anonymous">
+     <!--Aos-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="../css/style.css">
     <title>Registrate</title>
@@ -194,6 +199,10 @@
                     </div>
                 </div>
             </footer>
+            <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+            <script>
+                AOS.init();
+            </script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" 
             crossorigin="anonymous"></script>
 </body>
