--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -47,7 +47,7 @@
                     <a class="nav-link" href="./registrate.html"><span>Registrate</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="verCarrito">🛒</a>
+                    <a class="nav-link" id="verCarrito">🛒 <span id="cantidadcCarrito" class="cantidad-carrito"></span></a>
                 </li>
             </ul>
         </div>
@@ -57,15 +57,6 @@
     <div id="shopContent" class="shop-content">
 <div id="modal-container" class="modal-container"></div>
     </div>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
-        <script src="../js/compras.js"></script>
-
         <footer id="pie">
             <div class="Ultimo">
                 <h5>SOBRE NOSOTROS</h5>
@@ -108,6 +99,14 @@
                     <img class="Imagen-Footer" src="../imagenes/tik-tok-kebab-case.png" alt="Tik-tok"></a>
             </div>
         </footer>  
-        
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+        <script src="../js/compras.js"></script> 
+        <script src="../js/carrito.js"></script>
 </body>
 </html>
