--- a/pages/deportes.html
+++ b/pages/deportes.html
@@ -334,7 +334,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <!--<div class="container-fluid">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                 <div class="Proximos-Eventos">
@@ -531,6 +531,7 @@
             </div>
         </div>
     </div>
+-->
 
     <div class="container-fluid">
         <div class="row">
@@ -671,6 +672,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+        <script type="module" src="../assets/js/deportes.js"></script>
         
 </body>
 
