--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -55,115 +55,24 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./registrate.html"><span>Registrate</span></a>
                 </li>
+                <li class="nav-item"> 
+                    <a class="nav-link" id="verCarrito">  🛒 <span id="cantidadCarrito" class="cantidad-carrito"></span></a>
+                </li>
             </ul>
         </div>
         </div>
     </nav>
 
     <header class="Header-Info">
-        <h1>Mantenete informado con Twenty-one</h1>
+        <h1>En vivo</h1>
     </header>
     <!--Inicio del Grid con 4 imagenes-->
-    <div class="container-fluid">
-        <div class="row">
-            <!--Cantidad de columnas a cubrir-->
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                <div class="card">
-                    <img src="../imagenes/EstadioRiver-kebab-case.jpeg" class="img-fluid" alt="River">
-                    <div class="card-body">
-                        <h2 class="card-title">Liga Argentina⚽️</h2>
-                        <p class="card-text">
-                            <span>River quiere pisar fuerte <br>en la primera fecha <br>en el Mas Monumental.
-                                Revisa el historial <br>frente a Belgrano y aposta por quien <br>crees que
-                                sera el ganador!</span>
-                        </p>
-                        <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#staticBackdrop">
-                            Ver Mas
-                        </button>
-
-                        <!-- Modal -->
-                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
-                            tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h1 class="modal-title fs-5" id="staticBackdropLabel">River vs Belgrano</h1>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                            aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        Para este partido, River juega de local, frente a su hinchada <br> y segun las
-                                        estadisticas, River tiene un historial amplio contra Belgrano,
-                                        ganando los ultimos 5 partidos disputados.
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary"
-                                            data-bs-dismiss="modal">Cerrar</button>
-                                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Gracias
-                                            por la
-                                            informacion</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                <div class="card">
-                    <img src="../imagenes/Tenis.jpg" class="img-fluid" alt="Tenis" />
-                    <div class="card-body">
-                        <h2 class="card-title">Todo sobre el Us Open🥎</h2>
-                        <p class="card-text">
-                            <span>Mira quien tiene mayor <br>probabilidad de quedarse con
-                                el Us Open. <br>Segui en vivo la participacion <br>de Rafael Nadal, Alcaraz, y
-                                muchos
-                                mas.</span>
-                        </p>
-                        <a href="#" class="btn btn-primary">Ver Mas</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-        <div class="card">
-            <img src="../imagenes/F1.jpg" class="img-fluid" alt="F1" />
-            <div class="card-body">
-                <h3 class="card-title">Toda la Informacion de la Formula 1</h3>
-                <p class="card-text">
-                    <span>Twenty-one te trae todas las estadisticas <br> sobre la Formula 1, ultimos
-                        ganadores
-                        <br>vueltas mas rapidas, mejores timepos y mucho mas!<br> Nunca apostar fue tan
-                        facil y
-                        divertido!
-                    </span>
-                </p>
-                <a href="#" class="btn btn-primary">Ver Mas</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-        <div class="card">
-            <img src="../imagenes/barcelona-vs-real-madrid-prediction-kebab-case.jpg" class="img-fluid"
-                alt="Basquetball">
-            <div class="card-body">
-                <h3 class="card-title">Liga de España⚽️</h3>
-                <p class="card-text">
-                    <span>Segui de cerca toda la informacion del clasico para este domingo<br> entre
-                        Barcelona y
-                        Real Madrid. Mira quienes fueron los ultimos<br> anotadores, asistidores, corners y
-                        crea <br>la mejor
-                        apuesta.
-                    </span>
-                </p>
-                <a href="#" class="btn btn-primary">Ver Mas</a>
-            </div>
-        </div>
-    </div>
-    </div>
-    </div>
     </section>
+    <div id="shopContent" class="shop-content">
+        <div id="modal-container" class="modal-container"></div>
+
+
+    </div>
     <!--Fin de Grid con 4 imagenes-->
     <!--Inicio del Footer-->
     <!--Selector Id-->
@@ -223,6 +132,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+    <script src="../assets/js/deportes.js"></script>
+    <script src="../assets/js/carrito.js"></script>
+    <script src="../assets/js/product.js"></script>
 
 
 </body>
