--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -68,8 +68,12 @@
     </header>
     <!--Inicio del Grid con 4 imagenes-->
     </section>
-    <div id="shopContent" class="shop-content">
-        <div id="modal-container" class="modal-container"></div>
+    <section id="Informacion" class="row">
+   
+       
+
+    
+    </section>
 
 
     </div>
@@ -132,9 +136,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <script src="../assets/js/deportes.js"></script>
-    <script src="../assets/js/carrito.js"></script>
-    <script src="../assets/js/product.js"></script>
+    <script src="../assets/js/main.js"></script>
 
 
 </body>
