--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
         <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.0/build/global/luxon.min.js"></script>
-        <script src="./assets/js/main.js"></script>
+        <script src="./main.js"></script>
         
         
 </body>
