--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -56,31 +56,25 @@
                     <a class="nav-link" href="./registrate.html"><span>Registrate</span></a>
                 </li>
                 <li class="nav-item"> 
-                    <a class="nav-link" id="verCarrito">  🛒 <span id="cantidadCarrito" class="cantidad-carrito"></span></a>
+                    <a class="nav-link" class="verCarrito">  🛒 <span id="cantidadCarrito" class="cantidad-carrito"></span></a>
                 </li>
             </ul>
         </div>
         </div>
     </nav>
 
-    <header class="Header-Info">
-        <h1>Lo que se viene</h1>
-    </header>
-    <!--Inicio del Grid con 4 imagenes-->
-    </section>
-    <section id="Informacion" class="row">
-   
-       
+    <h1>Bienvenidos</h1>
+    <h2>Formula 1</h2>
+    <h3>Carrera:Silverstone</h3>
+<p> Puesto: <input id="puesto" type="number"></p>
+    <button onclick="recomendar('Checo Perez')">Checo Perez</button>
+    <button onclick="recomendar('Verstappen')">Verstappen</button>
+    <button onclick="recomendar('Sainz')">Sainz</button>
+    <button onclick="recomendar('Hamilton')">Hamilton</button>
+ 
+   <h3>Tus ganancias seran:</h3>
+   <p id="recomendacion">---</p>
 
-    
-    </section>
-
-
-    </div>
-    <!--Fin de Grid con 4 imagenes-->
-    <!--Inicio del Footer-->
-    <!--Selector Id-->
-    <!--Listas desordenadas-->
     <footer id="pie">
         <div class="container-fluid">
             <div class="row">
@@ -136,7 +130,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <script src="../assets/js/main.js"></script>
+        <script src="../info.js"></script>
+   
 
 
 </body>
